Fix dialog scroll on keyboard visible

--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,7 @@ body {
   background-color: #fafafa;
   height: 100%;
   overflow: hidden;
+  position: relative;
   user-select: none;
   width: 100%;
 }
